// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`centered 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`horizontal/vertical alignment 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  justify-items: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with background properties 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  background-color: #123456;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with border properties 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  border-radius: 5px;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with children 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
>
  <span>
    Hi!
  </span>
</div>
`;

exports[`with grid properties: auto 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-auto-columns: 50px;
  grid-auto-rows: 100px;
  grid-gap: 10px;
  grid-auto-flow: column;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with grid properties: templates 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat(3,3fr);
  grid-template-rows: 1fr 2fr;
  grid-gap: 10px;
  grid-auto-flow: row;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with no props 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;

exports[`with padding 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  padding: 10px;
}

<div
  class="c0"
  height="100%"
  width="100%"
/>
`;
